--- a/src/main/webapp/WEB-INF/views/common/head.jspf
+++ b/src/main/webapp/WEB-INF/views/common/head.jspf
@@ -11,7 +11,7 @@
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="icon" href="../../favicon.ico">
+<link rel="icon" href="/resources/img/favi.png">
 
 <title>Dashboard Template for Bootstrap</title>
 
