--- a/src/main/webapp/WEB-INF/views/common/head.jspf
+++ b/src/main/webapp/WEB-INF/views/common/head.jspf
@@ -12,7 +12,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="icon" href="/resources/img/favi.png">
-
+<script src="/resources/js/AjaxUtil.js"></script>
 <title>Dashboard Template for Bootstrap</title>
 
 <!-- Bootstrap core CSS -->
