--- a/src/main/webapp/WEB-INF/views/common/bottom.jspf
+++ b/src/main/webapp/WEB-INF/views/common/bottom.jspf
@@ -1,4 +1,32 @@
-	<!-- Bootstrap core JavaScript
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<script>
+function valicheck(){
+	var vcs = document.querySelectorAll('*[data-vc]');
+	
+	
+	for(vc of vcs){
+		var sp = vc.getAttribute('data-vc');
+		var min = sp.split(',')[0];
+		var max = sp.split(',')[1];
+		
+		if(vc.value.trim().length<min){
+			alert(vc+'는'+min+'글자 이상 넣어주십시오');
+			vc.focus();
+			return false;
+		}
+		if(vc.value.trim().length>max){
+			alert(max+'글자 이하로 넣어주십시오');
+			vc.focus();
+			return false;
+		}
+	}
+	return true;
+}		
+
+
+</script>
+<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script
